--- a/DaTaReachControl.yml
+++ b/DaTaReachControl.yml
@@ -2,20 +2,26 @@ name: DaTaReachControl
 channels:
   - mosek
   - gurobi
+  - conda-forge
   - http://conda.anaconda.org/gurobi
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - attrs=19.3.0=py_0
   - blas=1.0=mkl
-  - ca-certificates=2020.1.1=0
-  - certifi=2020.4.5.1=py37_0
+  - ca-certificates=2020.4.5.2=hecda079_0
+  - certifi=2020.4.5.2=py37hc8dfbb8_0
   - coverage=5.0=py37h7b6447c_0
+  - cvxpy=1.1.1=py37h3340039_0
+  - cvxpy-base=1.1.1=py37h0da4684_0
   - cycler=0.10.0=py37_0
   - dbus=1.13.12=h746ee38_0
+  - dill=0.3.1.1=py37hc8dfbb8_1
+  - ecos=2.0.7.post1=py37h03ebfcd_2
   - expat=2.2.6=he6710b0_0
   - fontconfig=2.13.0=h9420a91_0
   - freetype=2.9.1=h8a8886c_1
+  - future=0.18.2=py37hc8dfbb8_1
   - glib=2.63.1=h5a9c865_0
   - gst-plugins-base=1.14.0=hbbd80ab_1
   - gstreamer=1.14.0=hb453b48_1
@@ -26,10 +32,12 @@ dependencies:
   - jpeg=9b=h024ee3a_2
   - kiwisolver=1.1.0=py37he6710b0_0
   - ld_impl_linux-64=2.33.1=h53a641e_7
+  - libblas=3.8.0=15_mkl
   - libedit=3.1.20181209=hc058e9b_0
   - libffi=3.2.1=hd88cf55_4
   - libgcc-ng=9.1.0=hdf63c60_0
   - libgfortran-ng=7.3.0=hdf63c60_0
+  - liblapack=3.8.0=15_mkl
   - libpng=1.6.37=hbc83047_0
   - libstdcxx-ng=9.1.0=hdf63c60_0
   - libuuid=1.0.3=h1bed415_2
@@ -46,7 +54,8 @@ dependencies:
   - ncurses=6.1=he6710b0_1
   - numpy=1.18.1=py37h4f9e942_0
   - numpy-base=1.18.1=py37hde5b4d6_1
-  - openssl=1.1.1g=h7b6447c_0
+  - openssl=1.1.1g=h516909a_0
+  - osqp=0.6.1=py37h0da4684_2
   - packaging=20.1=py_0
   - pcre=8.43=he6710b0_0
   - pip=20.0.2=py37_1
@@ -58,6 +67,7 @@ dependencies:
   - pytest-cov=2.8.1=py_0
   - python=3.7.6=h0371630_2
   - python-dateutil=2.8.1=py_0
+  - python_abi=3.7=1_cp37m
   - qt=5.9.7=h5867ecd_1
   - readline=7.0=h7b6447c_5
   - scipy=1.4.1=py37h0b6359f_0
@@ -74,13 +84,9 @@ dependencies:
   - zlib=1.2.11=h7b6447c_3
   - pip:
     - decorator==4.4.2
-    - dill==0.3.1.1
-    - ecos==2.0.7.post1
-    - future==0.18.2
     - gpy==1.9.9
     - gpyopt==1.2.5
     - multiprocess==0.70.9
-    - osqp==0.6.1
     - paramz==0.9.5
     - pillow==7.0.0
     - scs==2.1.1-2
